--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,9 @@ body {
     max-width: 1070px;
     width: 100%;
     margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 .m-30t {
     margin-top: 30px; 
@@ -19,9 +22,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;  
 }
-.basket__container {
-    border: 1px solid #000;
-}
+
 .back-home {
     padding: 20px 50px;
     background: #45ea4587;
@@ -49,4 +50,14 @@ body {
 .money__container {
     display: flex;
     align-items: center;
+}
+.back-empty {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    padding: 20px 10px;
+    border: 1px solid #000;
+}
+.main-content {
+    width: calc(100% - 300px);
 }
