--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -17,6 +17,12 @@ body {
 .m-30t {
     margin-top: 30px; 
 }
+.m-30b {
+    margin-bottom: 30px; 
+}
+.m-10b {
+    margin-bottom: 10px; 
+}
 .card__container {
     display: flex;
     flex-wrap: wrap;
