--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -12,6 +12,7 @@ body {
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+    padding: 0 15px;
     justify-content: space-between;
 }
 .m-30t {
